--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
         <!-- 欢迎页 -->
         <activity
             android:name=".view.activity.SplashActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar" >
+
+        </activity>
         <!-- 登录页 -->
         <activity
             android:name=".view.activity.LoginActivity"
