--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,8 @@ dependencies {
     compile 'in.srain.cube:ptr-load-more:1.0.6'
     //版本更新
     compile 'pub.devrel:easypermissions:1.0.1'
+    //图片加载
+    compile 'com.lzy.widget:imagepicker:0.6.1'
+    //图片放大显示
+    compile 'com.bm.photoview:library:1.4.1'
 }
