--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,121 +21,142 @@
         <!-- 主界面 -->
         <activity
             android:name=".view.MainActivity"
-            android:screenOrientation="portrait"
             android:launchMode="singleTask"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
+
+            <!-- <intent-filter> -->
+            <!-- <action android:name="android.intent.action.MAIN" /> -->
+
+
+            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- </intent-filter> -->
+        </activity>
+        <!-- 欢迎页 -->
+        <activity
+            android:name=".view.activity.SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <!-- 登录页 -->
+        <activity
+            android:name=".view.activity.LoginActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <!-- 欢迎页 -->
-        <activity
-            android:screenOrientation="portrait"
-            android:name=".view.activity.SplashActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-        </activity>
-        <!-- 登录页 -->
-        <activity
-            android:screenOrientation="portrait"
-            android:name=".view.activity.LoginActivity"
-            android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysHidden|stateHidden|adjustPan">
-            <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.MAIN" />-->
-
-                <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
         <!-- 运维 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.OpsActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 能效 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.EnergyActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 电费数据 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.DataActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 我的 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.IdentityActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 修改 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.UpdateActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 电量数据 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.Data_ElectricActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 电流电压 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.Data_CurrentActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 问题详情 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.QuestionsActivity"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <!-- 密码修改 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.PasswordActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="stateAlwaysHidden|stateHidden|adjustPan"/>
+            android:windowSoftInputMode="stateAlwaysHidden|stateHidden|adjustPan" />
         <!-- 关于我们 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.AboutActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 意见反馈 -->
         <!-- 功率数据 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.Data_RateActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 功率因素 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.Data_FactorActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 电流不平衡 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.Data_NoActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 电压不平衡 -->
         <activity
-            android:screenOrientation="portrait"
             android:name=".view.activity.Data_PressActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <!-- 切换表号 -->
-        <activity android:name=".view.activity.TablenNumberActivity" />
-        <activity android:name=".view.activity.VersionActivity" />
-        <activity android:name=".view.activity.Energy_BaseenergyActivity" />
-        <activity android:name=".view.activity.Energy_ElectricalActivity" />
-        <activity android:name=".view.activity.Energy_ForceActivity" />
-        <activity android:name=".view.activity.Energy_TransformerActivity" />
-        <activity android:name=".view.activity.Energy_OpsActivity" />
-        <activity android:name=".view.activity.Energy_EnergyActivity"
+        <activity
+            android:name=".view.activity.TablenNumberActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" >
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.activity.VersionActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.activity.Energy_BaseenergyActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.activity.Energy_ElectricalActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.activity.Energy_ForceActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.activity.Energy_TransformerActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.activity.Energy_OpsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".view.activity.Energy_EnergyActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".view.activity.ChangeTableActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
