--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -209,6 +209,12 @@
             android:name="UMENG_APPKEY"
             android:value="5ad191a5b27b0a6009000151">
         </meta-data>
+
+
+        <activity
+            android:name="com.lzy.imagepicker.ui.ImagePreviewDelActivity"
+            android:theme="@style/ImagePickerThemeFullScreen"/>
+
     </application>
 
 </manifest>
